config/kind-multicluster/vs-weighted-east.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: details
spec:
  hosts:
  - details
  http:
  - route:
    - destination:
        host: details
        subset: east
      weight: 100
    - destination:
        host: details
        subset: west
      weight: 0
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
  - ratings
  http:
  - route:
    - destination:
        host: ratings
        subset: east
      weight: 100
    - destination:
        host: ratings
        subset: west
      weight: 0
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: east
      weight: 100
    - destination:
        host: reviews
        subset: west
      weight: 0
